Fixed screen flickering

--- a/stock_correlations/static/main.css
+++ b/stock_correlations/static/main.css
@@ -91,4 +91,5 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 11pt;
     opacity: 0.7;
     margin-top: 12px;
+    display: none;
 }
